src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-7.snap
---
source: src/lexer.rs
description: "0x7"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x7",
        ),
        start: 0,
        end: 3,
    },
]
