src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-8.snap
---
source: src/lexer.rs
description: "0x8"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x8",
        ),
        start: 0,
        end: 3,
    },
]
