src/snapshots/enderpy__lexer__tests__numeric-octal-0.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o0",
        ),
    },
]
