src/snapshots/enderpy__lexer__tests__numeric-octal-1.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o1",
        ),
        start: 0,
        end: 3,
    },
]
