src/snapshots/enderpy__lexer__tests__numeric-octal-2.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o2",
        ),
    },
]
