src/snapshots/enderpy__lexer__tests__numeric-octal-5.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o5",
        ),
        start: 0,
        end: 3,
    },
]
